--- a/index.html
+++ b/index.html
@@ -13,87 +13,91 @@
 	  src="http://code.jquery.com/jquery-3.3.1.min.js"
 	  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 	  crossorigin="anonymous">
- 	 </script>
+ 	</script>
 
- 	 <script type="text/javascript" src="assets/javascript/app.js"></script>
+ 	<script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
 
-	 <title>Train Scheduler</title>
+ 	<script type="text/javascript" src="assets/javascript/app.js"></script>
+
+	<title>Train Scheduler</title>
 </head>
 
 <body>
 
 <div class = "main-container">
-			<div class="row"></div>
-				<div class="col-md-12">
-					 <div class="jumbotron">
-				  		<h1 class="display-4">Travel By Train</h1>
-				  		<p class="lead">Trains, planes, and automobiles. But only trains.</p>
-				  		<hr class="my-4">
-				  		<p>Schedules and estimated arrival</p>
-					</div>
-				</div>
+	<div class="row"></div>
+		<div class="col-md-12">
+			<div class="jumbotron">
+				 <h1 class="display-4">Travel By Train</h1>
+				 <p class="lead">Trains, planes, and automobiles. But only trains.</p>
+				 <hr class="my-4">
+				 <p>Schedules and estimated arrival</p>
 			</div>
+		</div>
+	</div>
 
-			<div class="row">
-				<div class="col-md-12">
-					<div class="card">
-  						<div class="card-header">Current Train Schedule</div>
- 						<div class="card-body">
-    						<div class="table-responsive">
-  								<table class="table">
-    								<thead>
-    									<tr>
-    										<th scope="col">Train Name</th>
-    										<th scope="col">Destination</th>
-    										<th scope="col">Frequency(min)</th>
-    										<th scope="col">Next Arrival</th>
-    										<th scope="col">Minutes Away</th>
-    									</tr>
-    								</thead>
-    								 <tbody>
-    								 	<tr>
-    								 		<th scope="row">Trenton Express</th>
-    								 		<td>Trenton</td>
-    								 		<td>25</td>
-    								 		<td>05:35PM</td>
-    								 		<td>10</td>
-    								 	</tr>
-    								 </tbody>
-  								</table>
-							</div>
- 						 </div>
-					</div>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="card">
+  				<div class="card-header">Current Train Schedule</div>
+ 					<div class="card-body">
+    					<div class="table-responsive">
+  							<table class="table">
+    							<thead>
+    								<tr>
+    									<th scope="col">Train Name</th>
+    									<th scope="col">Destination</th>
+    									<th scope="col">Frequency(min)</th>
+    									<th scope="col">Next Arrival</th>
+    									<th scope="col">Minutes Away</th>
+    								</tr>
+    							</thead>
+    							<tbody>
+    								 <tr>
+    								 	<th scope="row">Trenton Express</th>
+    								 	<td>Trenton</td>
+    								 	<td>25</td>
+    								 	<td>05:35PM</td>
+    								 	<td>10</td>
+    								 </tr>
+    							</tbody>
+  							</table>
+						</div>
+ 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
 
-			<div class="row">
-				<div class="col-md-12">
-					<div class="card">
-  						<h5 class="card-header">Add Train</h5>
-  					<div class="card-body">
-   						 <form>
-							  <div class="form-group">
-							    <label for="exampleInputTrain1">Train Name</label>
-							    <input type="train" class="form-control" id="exampleInputTrain1" placeholder="">
-							  </div>
-							  <div class="form-group">
-							    <label for="exampleInputDestination1">Destination</label>
-							    <input type="destination" class="form-control" id="exampleInputDestination1" placeholder="">
-							  </div>
-							  <div class="form-group">
-							    <label for="exampleInputTime1">First Train Time(HH:mm-military time)</label>
-							    <input type="time" class="form-control" id="exampleInputTime1" placeholder="">
-							  </div>
-							  <div class="form-group">
-							    <label for="exampleInputFrequency1">Frequency (min)</label>
-							    <input type="frequency" class="form-control" id="exampleInputFrequency1" placeholder="">
-							  </div>
-							  <button type="submit" class="btn btn-primary">Submit</button>
-						</form>
-  					</div>
-					</div>
-				</div>
+
+	<div class="row">
+		<div class="col-md-12">
+			<div class="card">
+  				<h5 class="card-header">Add Train</h5>
+  				<div class="card-body">
+   					<form>
+						<div class="form-group">
+							<label for="exampleInputTrain1">Train Name</label>
+							<input type="train" class="form-control name" id="train-input" placeholder="">
+						</div>
+						<div class="form-group">
+							<label for="exampleInputDestination1">Destination</label>
+							<input type="destination" class="form-control destination" id="destination-input" placeholder="">
+						</div>
+						<div class="form-group">
+							<label for="exampleInputTime1">First Train Time(HH:mm-military time)</label>
+							<input type="time" class="form-control time1" id="time-input" placeholder="">
+						</div>
+						<div class="form-group">
+							<label for="exampleInputFrequency1">Frequency (min)</label>
+							<input type="frequency" class="form-control frequency" id="frequency-input" placeholder="">
+						</div>
+						<button type="submit" class="btn btn-primary" id="submit">Submit</button>
+					</form>
+  				</div>
 			</div>
+		</div>
+	</div>
 
 </div> <!-- END MAIN CONTAINER -->
 
