added logic and html display ID's

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     							</thead>
     							<tbody>
     								 <tr>
-    								 	<th scope="row">Trenton Express</th>
-    								 	<td>Trenton</td>
-    								 	<td>25</td>
-    								 	<td>05:35PM</td>
-    								 	<td>10</td>
+    								 	<th scope="row" id="train-display">Trenton Express</th>
+    								 	<td id="destination-display">Trenton</td>
+    								 	<td id="frequency-display">25</td>
+    								 	<td id="arrival-display">05:35PM</td>
+    								 	<td id="minutesAway-display">10</td>
     								 </tr>
     							</tbody>
   							</table>
