functional logic for table and form

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	  crossorigin="anonymous">
  	</script>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
+
  	<script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
 
  	<script type="text/javascript" src="assets/javascript/app.js"></script>
@@ -53,13 +55,6 @@
     								</tr>
     							</thead>
     							<tbody>
-    								 <tr>
-    								 	<th scope="row" id="train-display">Trenton Express</th>
-    								 	<td id="destination-display">Trenton</td>
-    								 	<td id="frequency-display">25</td>
-    								 	<td id="arrival-display">05:35PM</td>
-    								 	<td id="minutesAway-display">10</td>
-    								 </tr>
     							</tbody>
   							</table>
 						</div>
